2002-09-16  Eric Sandall <eric@sandall.us>
		Added Nealbirch's init.d scripts, but just so they're here, ready to be used.  Nothing is done with them as of yet.  :)
		Removed functions.bz2 (I thought I did this already...)
		Modified BUILD to check for each symlink, at WaRL0CK's, Oadae's, and toomanymirrors' suggestion.  Fixes the mounting problems everyone has been having, though I still don't know where the problem came from.  Oadae suggested it happened from the transition for e2fsprogs->init.d and the changes which kept happening, and this might be correct.  Anyways, symlinks will now be (re)created if they don't exist.

2002-09-12  Eric Sandall <eric@sandall.us>
		Uncompressed functions.bz2 and mount.sh.bz2
		Made BUILD simpler, for now

2002-09-09  Eric Sandall <eric@sandall.us>
		Added 'true' to POST_INSTALL and PRE_BUILD
		Moved mount.sh from e2fsprogs to init.d (Bug #914)
		Revised BUILD to track (via 'install') the files installed

2002-08-21  Eric Sandall <eric@sandall.us>
		This spell adds /etc/init.d/functions for general use init functions and variables
		Will go into a basesystem-type spell once we get that worked out