@@ -34,7 +34,9 @@ start() {
   echo     > /etc/mtab
   mount    -f -o remount,rw /
   echo "Mounting local filesystems..."
-  mount    -a
+  # Fixed so as to not mount networked filesystems yet (no networking)
+  # mountnfs.sh will take care of this.
+  mount    -a  -t  nosmbfs,nonfs,noncpfs
   evaluate_retval
   rm       -f /fastboot /forcefsck
 
@@ -48,7 +50,8 @@ stop() {
   evaluate_retval
 
   echo      "Unmounting local filesystems... "
-  umount   -t nodevfs,noproc -f -a -r
+  # Do not unmount networked filesystems, mountnfs.sh does that.
+  umount   -t nodevfs,noproc,nosmbfs,nonfs,noncpfs -f -a -r
   evaluate_retval
 
   cat  /etc/mtab  |
